@@ -5876,3 +5876,5 @@ PACKAGE: 2.2.99.2
  * Item(s)->Field(s)
  * 'No Tools Available' as FirstTool title
 
+2006-12-04 cjg
+ * Improved the way columns shows no items
